fixed blogarticle-with-disqus and article-nav on mobile

--- a/assets/src/sass/styles.sass
+++ b/assets/src/sass/styles.sass
@@ -844,6 +844,29 @@ $main-nav-percentage: 30
 
 #article-nav
     display: none
+
+    .next-page
+        text-align: right
+    .next-page,
+    .prev-page
+        font-weight: bold
+        display: block
+        cursor: pointer
+        border-radius: $radius
+        padding: 0.5em
+        margin: $space-t-b/2 0
+        transition: 0.3s
+        text-decoration: none
+        background: $quadrary - #050505
+        border: $border-width $border-style $quadrary - #101010
+        a
+            text-decoration: none
+        &:hover
+            border-color: $secondary - #222
+            background: $secondary - #222
+            a
+                color: $quadrary
+
     @media screen and (min-width: $breakpoint)
         a
             text-decoration: none
@@ -869,6 +892,16 @@ $main-nav-percentage: 30
             z-index: 40
             top: 45%
             width: 50%
+            background: none
+            border: none
+            .text
+                z-index: 2
+            .icon
+                z-index: 1
+            &:hover
+                background: none
+                a
+                    color: $secondary
         .next-page
             right: 0
             .text,
